Fixed capitalaztion issue on mobile.Changed text for signup.

--- a/client/landing/site.landing/styl/core.commons.styl
+++ b/client/landing/site.landing/styl/core.commons.styl
@@ -185,6 +185,10 @@ button
         background      rgba(39, 174, 96, 1)
         color           #fff
 
+      &.buttonized.login
+      .buttonized.signup
+        text-transform  uppercase
+
 
 
 .koding-header-logo
